--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MIT License",
   "main": "index.js",
   "scripts": {
-    "start": " node app.js"
+    "start": " node ./js/app.js"
   },
   "keywords": [],
   "author": "",
