--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MIT License",
   "main": "index.js",
   "scripts": {
-    "start": " node ./js/app.js"
+   // "start": " node ./js/app.js"
+   "start": "node index.js"
   },
   "keywords": [],
   "author": "",
