--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "MIT License",
   "main": "index.js",
   "scripts": {
-   "start": "node ../js/app.js"
+    "start": "node ./js/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@supabase/supabase-js": "^2.39.3",
-    "express": "4.18.2",
+    "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7"
   }
