--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@cloudinary/url-gen": "^1.16.0",
     "@supabase/supabase-js": "^2.39.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
